Android: fix content url handling of filenames with spaces

The Android APIs expect the content url filenames to have
percent encoded spaces, so handle that internally, if missing,
under the content file engine.

Fixes: QTBUG-112663
Change-Id: Ieb2ee41a2587f985b589ca54b88f1cff89992154
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>
(cherry picked from commit ac8a39c416a5037ca253919fa61a08b4c501906c)
Reviewed-by: Rami Potinkara <rami.potinkara@qt.io>